samples/_failures_safe/1761717571_d30246_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14dba26e.c: In function ‘main’:
./samples/SAFE/__tmp_14dba26e.c:171:13: error: expected declaration or statement at end of input
  171 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_14dba26e.c:171:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14dba26e.c:171:13: error: expected declaration or statement at end of input
